Dark mode Bugs fixed

--- a/client/src/scenes/faqPage/FAQ.css
+++ b/client/src/scenes/faqPage/FAQ.css
@@ -8,10 +8,12 @@
   width: 100%;
   margin-bottom: 20px;
   padding: 20px;
+  color: inherit;
 }
 
 .question-button:hover {
   background-color: #f5f5f5;
+  border-radius: 20px;
 }
 
 .question-button:focus {
@@ -22,7 +24,7 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   width: 100%;
-  height: 150px;
+  height: 175px;
 }
 
 #title {
