--- a/client/src/scenes/footer/Footer.css
+++ b/client/src/scenes/footer/Footer.css
@@ -57,7 +57,6 @@
 }
 /* Footer */
 #footer {
-  background: #fafafa;
   margin-top: 100px;
 }
 
@@ -82,13 +81,15 @@
 }
 
 #footer .nav .nav-link {
-  color: #000;
   padding-left: 0;
   padding-right: 0;
 }
 
+#footer a {
+  color: inherit;
+}
+
 #footer .nav .nav-link:hover {
-  color: #000;
   text-decoration: underline;
 }
 
@@ -147,6 +148,7 @@
   flex-direction: column;
 }
 .help-list {
+  color: inherit;
   list-style: none;
   padding-left: 0;
   padding-right: 0;
@@ -157,6 +159,6 @@
 }
 
 .help-list li a {
+  color: inherit;
   margin-top: 20px;
-  color: #000;
 }
