--- a/client/src/scenes/navbar/Nav.css
+++ b/client/src/scenes/navbar/Nav.css
@@ -9,7 +9,6 @@
 }
 
 .header-bg {
-  background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
   margin: 10px;
   border-radius: 50px;
@@ -69,13 +68,11 @@
 .entry2 {
   display: none;
 }
-@media screen and (max-width: 940px) {
+@media screen and (max-width: 1080px) {
   .header {
     max-width: 100%;
-    background-color: rgba(255, 255, 255, 1);
   }
   .header-bg {
-    background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(10px);
     transition: 0.3s;
 
@@ -96,7 +93,7 @@
     left: -100%;
     top: 90px;
     flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.8);
+
     backdrop-filter: blur(10px);
     width: 100%;
     height: 90vh;
@@ -108,7 +105,7 @@
   .nav-menu.active {
     left: 0;
     display: block;
-    background-color: rgba(255, 255, 255, 0.8);
+
     backdrop-filter: blur(10px);
   }
 
@@ -127,7 +124,6 @@
     display: block;
   }
   .header-bg2 {
-    background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(10px);
     transition: 0.3s;
     border-radius: 0px;
@@ -135,7 +131,6 @@
   }
 
   .nav-menu2 {
-    background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(10px);
     width: 100%;
     text-align: center;
